// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navbar tests > The Navbar renders 1`] = `
<a
  class="navLinks"
  href="#/"
>
  Home
</a>
`;

exports[`Navbar tests > The Navbar renders 2`] = `
<a
  class="navLinks"
  href="#/shop"
>
  Shop
</a>
`;

exports[`Navbar tests > The Navbar renders 3`] = `
<a
  class="navLinks"
  href="#/cart"
>
  Shopping Cart (
  0
  )
</a>
`;
